--- a/index.html
+++ b/index.html
@@ -4,25 +4,32 @@
 <html>
   <head>
     <title>Status of Frigg CI</title>
-    <style>
-      body {font-family: sans-serif;font-size: 27px; text-align: center;}
-      ul{ list-style-type: none ; max-width: 500px; margin: 40px auto; }
-      .message { padding: 16px; }
-      .message em { font-size: 0.6em; }
-      .message-green { border-bottom: 4px solid green; background: #dff0d8;}
-      .message-orange { border-bottom: 4px solid orange; background: #fcf8f2; }
-      .message-yellow { border-bottom: 4px solid yellow; background: #fdf7f7;}
-    </style>
+    <link href='//fonts.googleapis.com/css?family=Roboto:400,100,300,500,400italic' rel='stylesheet' type='text/css'>
+    <link href="/main.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.1/moment.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
   </head>
   <body>
-    <h2>Status of Frigg CI</h2>
-    <ul>
-      {% for message in site.data.messages %}
-        <li class="message message-{{ message.status }}">
-        {{ message.content }}<br/>
-          <em>{{ message.timestamp }}</em>
-        </li>
-      {% endfor %}
-    </ul>
+    <div class="container">
+      <h1>Status of Frigg CI</h1>
+      <p>Below is our last status messages:</p>
+      <ul class="messages">
+        {% for message in site.data.messages %}
+          <li class="message message-{{ message.status }}">
+          {{ message.content }}<br/>
+          <span class="timestamp" title="{{ message.timestamp }}">
+            {{ message.timestamp }}
+          </span>
+          </li>
+        {% endfor %}
+      </ul>
+    </div>
+    <script>
+      $(document).ready(function() {
+        $('.timestamp').each(function() {
+          $(this).html(moment($(this).html(), 'YYYY-MM-DD HH:mm Z').fromNow());
+        });
+      });
+    </script>
   </body>
 </html>
